--- a/Login/tools.ui
+++ b/Login/tools.ui
@@ -637,12 +637,12 @@
          <string>Line Number</string>
         </property>
         <property name="buddy">
-         <cstring>lineEdit</cstring>
+         <cstring>lineEdit_linenum</cstring>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit"/>
+       <widget class="QLineEdit" name="lineEdit_linenum"/>
       </item>
       <item>
        <widget class="QLabel" name="label_empid">
